<resources>
    <string name="app_name">Don\'t Google It!</string>
    <string name="teEnterName">Enter your name</string>
    <string name="tvInvalidName">No numbers, special characters, or spaces</string>
    <string name="btnChooseQuiz">Quiz me!</string>
    <string name="tvTitle" />
    <string name="tvQuestion" />
    <string name="btnA1" />
    <string name="btnA2" />
    <string name="btnA3" />
    <string name="btnA4" />
    <string name="btnNext">Next</string>

    <string name="tvResult">BLAH</string>
    <string name="btnRestart">Quiz me again!</string>
    <string name="ivResultIcon">Old-style Google emoji face displayed. The emotion depicted is based on your score</string>
</resources>